--- a/web/src/main/webapp/help/1_3_changeStudy_Help.html
+++ b/web/src/main/webapp/help/1_3_changeStudy_Help.html
@@ -9,6 +9,8 @@
 <title>ClinCapture Help</title>
 
 <link rel="stylesheet" href="../includes/styles_hf.css" type="text/css" media="screen" />
+<script type="text/JavaScript" language="JavaScript" src="../includes/jmesa/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="colorTheme.js"></script>
 
 </head>
 
