Fixes #963: Getting duplicate CRF items in Items list. Submitted by satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1063 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -257,12 +257,14 @@
                 <li id="studiesLink" class="active"><a class="pont green" href="#studies">Studies</a></li>
                 <li id="eventsLink"><a class="pont green" href="#events">Events</a></li>
                 <li id="crfsLink"><a class="pont green" href="#crfs">CRFs</a></li>
+                <li id="versionsLink"><a class="pont green" href="#versions">CRF Versions</a></li>
                 <li id="itemsLink"><a class="pont green" href="#items">Items</a></li>
               </ul>
               <div class="tab-content">
                 <div class="tab-pane active" id="studies"></div>
                 <div class="tab-pane" id="events"></div>
                 <div class="tab-pane" id="crfs"></div>
+                <div class="tab-pane" id="versions"></div>
                 <div class="tab-pane" id="items"></div>
               </div>
             </div>
