Fixes #966: Use transparent logo. Submitted by satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1064 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/validation.html
+++ b/web/src/main/webapp/designer/validation.html
@@ -58,15 +58,7 @@
       <div class="row">
         <div class="col-md-12">
           <nav class="navbar navbar-default nav-cont navbar-fixed-bottom" role="navigation">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="http://trac.clinovo.com"><img style="max-width:100px" src="images/brand1.png"></a>
-            </div>
+            <a class="navbar-brand pull-right" href="http://trac.clinovo.com"><img style="max-width:100px" src="images/brand1.png"></a>
             <ul class="nav nav-justified">
               <li><a id="back" href="" class="btn btn-primary navbar-btn">Back</a></li>
               <li><a id="save" class="btn btn-primary navbar-btn">Save</a></li>
