--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -10,25 +10,25 @@
     <link rel="shortcut icon" href="https://www.clinovo.com/favicon.ico"> 
 
     <!-- Bootstrap -->
-    <link href="deps/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="deps/jquery/css/jquery-ui-1.10.3.min.css" rel="stylesheet">
-    <link href="deps/datepicker/css/datepicker.css" rel="stylesheet">
+    <link href="css/jquery-ui-1.10.3.min.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/datepicker.css" rel="stylesheet" media="screen">
 
     <link href="css/designer.css" rel="stylesheet" media="screen">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="deps/json2/json2.js"></script>
+      <script src="js/json2.js"></script>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
-    <script src="deps/jquery/js/jquery.min.js"></script>
-    <script src="deps/jquery/js/jquery-ui-1.10.3.min.js"></script>
-    <script src="deps/bootbox/bootbox.js"></script>
-    <script src="deps/bootstrap/js/bootstrap.min.js"></script>
-    <script src="deps/datepicker/js/bootstrap-datepicker.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-ui-1.10.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootbox.js"></script>
+    <script src="js/bootstrap-datepicker.js"></script>
 
     <script src="js/parser.js"></script>
     <script src="js/designer.js"></script>
