--- a/web/src/main/webapp/designer/validation.html
+++ b/web/src/main/webapp/designer/validation.html
@@ -10,10 +10,7 @@
     <link rel="shortcut icon" href="https://www.clinovo.com/favicon.ico"> 
 
     <!-- Bootstrap -->
-    <link href="deps/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="deps/jquery/css/jquery-ui-1.10.3.min.css" rel="stylesheet">
-    <link href="deps/datepicker/css/datepicker.css" rel="stylesheet">
-
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/designer.css" rel="stylesheet" media="screen">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -24,13 +21,10 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
-    <script src="deps/jquery/js/jquery.min.js"></script>
-    <script src="deps/jquery/js/jquery-ui-1.10.3.min.js"></script>
-    <script src="deps/bootstrap/js/bootstrap.min.js"></script>
-    <script src="deps/bootbox/bootbox.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     
     <script src="js/designer.js"></script>
-    <script src="js/transport.js"></script>
     <script src="js/validation.js"></script>    
 
   </head>
