Fixes #967: Implement the editing of existing rules. Submitted by satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1081 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/validation.html
+++ b/web/src/main/webapp/designer/validation.html
@@ -23,6 +23,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootbox.js"></script>
     
     <script src="js/designer.js"></script>
     <script src="js/validation.js"></script>    
