--- a/web/src/main/webapp/designer/validation.html
+++ b/web/src/main/webapp/designer/validation.html
@@ -5,8 +5,12 @@
     <title>Rule Designer</title>
   
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="shortcut icon" href="https://www.clinovo.com/favicon.ico"> 
 
     <!-- Bootstrap -->
