Fixes #961: Support _CURRENT_DATE. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1217 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -92,10 +92,8 @@
               <div class="panel-body">
                 <p id="plus" class="btn comp">&#43;</p>
                 <p id="minus" class="btn comp">&#45;</p>
-              </div>
-              <div class="panel-body">
                 <p id="multiply" class="btn comp">&times;</p>
-                <p id="divide" class="btn comp">&divide;</p>                
+                <p id="divide" class="btn comp">&divide;</p>
               </div>
             </div>
           </div>
@@ -273,6 +271,7 @@
             <p id="number" class="btn group">Number</p>
             <p id="date" class="btn group">Date</p>
             <p id="empty" class="btn group">Empty</p>
+            <p id="currentDate" class="btn group">Current date</p>
             <div id="variables" class="space-top">
               <ul class="nav nav-tabs">
                 <li id="studiesLink" class="active"><a class="pont green" href="#studies">Studies</a></li>
