Fixes #1080: Double click on any item breaks layout of all other items in IE.. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1225 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -8,7 +8,7 @@
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
     <meta http-equiv='cache-control' content='no-cache'>
-    <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="https://www.clinovo.com/favicon.ico"> 
@@ -114,7 +114,7 @@
         <div id="designSurface" class="col-md-12 targettable">
           <div class="panel panel-primary">
             <div class="panel-body">
-              <div class="pull-right space-right-p">
+              <div class="pull-right trash">
                 <div id="deleteButton" type="button">
                   <span class="glyphicon glyphicon-trash pull-right space-top-m"></span>
                 </div>
