Fixes #1081. Rule studio should allow to create rules for specific events. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1262 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -141,6 +141,9 @@
         <div class="col-md-7 space-top-sm">
             <div class="input-group parent-target">
               <input type="text" class="target form-control">
+              <span class="input-group-addon">
+                <input class="eventify" type="checkbox">
+              </span>
               <span class="glyphicon glyphicon-remove input-group-addon"></span>
             </div>
         </div>
