Fixes #1079. Rule studio should allow to create rules for specific lines in repeating forms. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1316 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -103,7 +103,7 @@
           <div class="panel panel-primary">
             <div class="panel-body">
               <div class="pull-right trash">
-                <div id="deleteButton" type="button">
+                <div id="deleteButton" type="button" class="hidden">
                   <span class="glyphicon glyphicon-trash pull-right space-top-m"></span>
                 </div>
               </div>
@@ -128,8 +128,12 @@
           <div class="col-md-7 space-top-sm">
             <div class="input-group parent-target">
               <input type="text" class="target form-control">
-              <span class="input-group-addon">
-              <input class="eventify" type="checkbox">
+              <input type="text" class="linefy form-control input-group hidden">
+              <span class="input-group-addon hidden">
+                <input class="eventify" type="checkbox">
+              </span>
+              <span class="input-group-addon hidden">
+                <input class="versionify" type="checkbox">
               </span>
               <span class="glyphicon glyphicon-remove input-group-addon"></span>
             </div>
