Fixes #1173: Increase the panel height. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1324 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -112,7 +112,8 @@
           </div>
         </div>
       </div>
-      <div class="inner-scrollbar">
+      <div class="inner-scrollbar-wrapper">
+        <div class="inner-scrollbar">
         <div class="row">
           <div class="col-md-3 space-top-sm">
             <span>Rule Description:</span>
@@ -240,6 +241,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
       <div class="row footer-container">
         <div class="col-md-12">
