Fixes #1129: Allow boxes to be dragged in any order on the RS Build surface. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1334 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -101,7 +101,7 @@
       <div class="row">
         <div id="designSurface" class="col-md-12 targettable">
           <div class="panel panel-primary">
-            <div class="panel-body">
+            <div class="panel-body sortable">
               <div class="pull-right trash">
                 <div id="deleteButton" type="button" class="hidden">
                   <span class="glyphicon glyphicon-trash pull-right space-top-m"></span>
