--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rule Designer</title>
+    <title>Rules Studio</title>
     <meta charset="utf-8">
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
