Refs #1175: RS does not create a rule correctly for CRFs with the same item names. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1359 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/validation.html
+++ b/web/src/main/webapp/designer/validation.html
@@ -39,7 +39,8 @@
           <legend >Rule validation results</legend>
           <div class="alert alert-success success">Rule is valid</div>
           <div class="alert alert-danger failure">Rule is Invalid</div>
-
+          <legend id="failure">Rule failure message</legend>
+          <div class="alert alert-info"></div>
           <legend class="success">CRF items affected:</legend>
           <ul id="items" class="list-group success"></ul>
           <legend class="success">Rule executions</legend>
