--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -272,12 +272,14 @@
                 <li id="versionsLink"><a class="pont green" href="#versions">CRF Versions</a></li>
                 <li id="itemsLink"><a class="pont green" href="#items">Items</a></li>
               </ul>
-              <div class="tab-content">
-                <div class="tab-pane active" id="studies"></div>
-                <div class="tab-pane" id="events"></div>
-                <div class="tab-pane" id="crfs"></div>
-                <div class="tab-pane" id="versions"></div>
-                <div class="tab-pane" id="items"></div>
+              <div class="data-scrollbar">
+                <div class="tab-content">
+                  <div class="tab-pane active" id="studies"></div>
+                  <div class="tab-pane" id="events"></div>
+                  <div class="tab-pane" id="crfs"></div>
+                  <div class="tab-pane" id="versions"></div>
+                  <div class="tab-pane" id="items"></div>
+                </div>
               </div>
             </div>
           </div>
