--- a/web/src/main/webapp/designer/validation.html
+++ b/web/src/main/webapp/designer/validation.html
@@ -45,8 +45,8 @@
           <ul id="items" class="list-group success"></ul>
           <legend class="success">Rule executions</legend>
           <ul id="executions" class="list-group success"></ul>
-          <legend class="success">Rule actions</legend>
-          <ul id="actions" class="list-group success"></ul>
+          <legend class="success">Rule action</legend>
+          <ul id="action" class="list-group success"></ul>
         </div>
       </div>
       <div class="row">
