Fixes #1270: The contain icon seems to be inverted. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1407 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -68,7 +68,7 @@
                 <p id="equal" class="btn comp">&#61;</p>
                 <p id="notEqual" class="btn comp">&#8800;</p>
                 <p id="notContain" class="btn comp" >&#8713;</p>
-                <p id="contain" class="btn comp" >&#8715;</p>
+                <p id="contain" class="btn comp" >&isin;</p>
               </div>
             </div>
           </div>
