Fixes #1306: Change "Rule Description:" to "Rule name:". Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1477 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -114,7 +114,7 @@
         <div class="inner-scrollbar">
         <div class="row">
           <div class="col-md-3 space-top-sm">
-            <span>Rule Description:</span>
+            <span>Rule name:</span>
           </div>
           <div class="col-md-7 space-top-sm">
             <input type="text" class="form-control" id="ruleName">
