Fixes #1307: Change "Apply this rule to:" to "Target this rule to:". Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1478 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -122,7 +122,7 @@
         </div>
         <div class="row">
           <div class="col-md-3 space-top-sm">
-            <span>Apply this rule to:</span>
+            <span>Target this rule to:</span>
           </div>
           <div class="col-md-7 space-top-sm">
             <div class="input-group parent-target">
