Fixes #1312: Add Options on top of target field. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1485 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/rule.html
+++ b/web/src/main/webapp/designer/rule.html
@@ -136,6 +136,7 @@
               </span>
               <span class="glyphicon glyphicon-remove input-group-addon"></span>
             </div>
+            <span class="glyphicon glyphicon-wrench opt"></span>
           </div>
         </div>
         <div class="row">
