Fixes #1289: VAL - “Source Data Verification” Help page is displayed on clicking“Medical Coding” help icon. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1486 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/help/1_0_myOpenClinica_Help.html
+++ b/web/src/main/webapp/help/1_0_myOpenClinica_Help.html
@@ -41,6 +41,7 @@
 	<a href="4_0_extractData_Help.html">4. Extract Data</a><br />
 	<a href="5_0_studySetup_Help.html">5. Study Setup</a><br />
 	<a href="6_0_administerSystem_Help.html">6. Administration</a><br />
+	<a href="7_0_medicalCoding_Help.html">7. Medical Coding</a><br />	
 	</p>
 	</div>
 	</div>
