--- a/web/src/main/webapp/help/7_0_medicalCoding_Help.html
+++ b/web/src/main/webapp/help/7_0_medicalCoding_Help.html
@@ -35,13 +35,6 @@
 	<a href="1_0_myOpenClinica_Help.html">1. My ClinCapture</a><br />
 	<a href="2_0_submitData_Help.html">2. Submit Data</a><br />
 	<a href="3_0_manageStudy_Help.html">3. Monitor and Manage Data</a><br />
-	&nbsp;<a href="3_1_SDV_Help.html"><em>3.1 SDV</em></a><br />
-	&nbsp;&nbsp;&nbsp;<a href="3.1.1_bySubject_Help.html"><em>3.1.1 View By Study Subject Id</em></a><br />
-	&nbsp;&nbsp;&nbsp;<a href="3.1.2_byEvent_Help.html"><em>3.1.2 View By Event CRF</em></a><br />
-	&nbsp;<a href="3_2_auditLogs_Help.html"><em>3.2 Study Audit Log</em></a><br />
-	&nbsp;<a href="3_3_rules_Help.html"><em>3.3 Rules</em></a><br />
-	&nbsp;<a href="3_4_subjectGroups_Help.html"><em>3.4 Groups</em></a><br />
-	&nbsp;<a href="3_5_viewCRF_Help.html"><em>3.5 CRFs</em></a><br /><br />
 	<a href="4_0_extractData_Help.html">4. Extract Data</a><br />
 	<a href="5_0_studySetup_Help.html">5. Study Setup</a><br />
 	<a href="6_0_administerSystem_Help.html">6. Administration</a><br />
@@ -62,18 +55,20 @@
 
 <!--content container, on the right side-->
 <div id="content">
-	<h1>3. Monitor and Manage Data Help</h1>
-	<p>In this section you can do <b>source data verification</b> (SDV), see the <b>study audit log</b> and create <b>rules</b>. 
-	Additionally, you can create and manage <b>groups</b> and/or upload and manage <b>CRFs</b>.</p>
-	     <blockquote>
-			<p><a href="3_1_SDV_Help.html"><em>3.1 SDV</em></a></p>
-			<p>&nbsp;&nbsp;<a href="3.1.1_bySubject_Help.html"><em>3.1.1 View By Study Subject Id</em></a></p>
-			<p>&nbsp;&nbsp;<a href="3.1.2_byEvent_Help.html"><em>3.1.2 View By Event CRF</em></a></p>
-	        <p><a href="3_2_auditLogs_Help.html"><em>3.2 Study Audit Log</em></a></p>
-			<p><a href="3_3_rules_Help.html"><em>3.3 Rules</em></a></p>
-	        <p><a href="3_4_subjectGroups_Help.html"><em>3.4 Groups</em></a></p>
-			<p><a href="3_5_viewCRF_Help.html"><em>3.5 CRFs</em></a></p>
-		</blockquote>
+	<h1>7. Medical Coding Help</h1>
+	<p>A new role has been created in ClinCapture: Study Coder. 
+	Users with this role or Study Administrator can appropriately categorize medical terms entered in ClinCapture. 
+	Medical coding greatly improves your clinical data consistency and interoperability. 
+	This function currently supports four medical dictionaries: 
+		<ul>
+			<li>MedDRA</li>
+			<li>WHODrug</li>
+			<li>ICD-9CM</li>
+			<li>ICD-10</li>
+		</ul>
+	New medical ontologies will be supported over time, on an as-needed basis. </p>	     
+		<br />
+<a href='#top'>Back to Top</a>
 </div>
 <!--end content-->
 
