--- a/web/src/main/webapp/help/1_1_updateProfile_Help.html
+++ b/web/src/main/webapp/help/1_1_updateProfile_Help.html
@@ -41,6 +41,7 @@
 	<a href="4_0_extractData_Help.html">4. Extract Data</a><br />
 	<a href="5_0_studySetup_Help.html">5. Study Setup</a><br />
 	<a href="6_0_administerSystem_Help.html">6. Administration</a><br />
+	<a href="7_0_medicalCoding_Help.html">7. Medical Coding</a><br />	
 	</p>
 	</div>
 	</div>
