--- a/web/src/main/webapp/help/5_4_sites_Help.html
+++ b/web/src/main/webapp/help/5_4_sites_Help.html
@@ -43,6 +43,7 @@
 	&nbsp;<a href="5_3_users_Help.html"><em>5.3 Users</em></a><br />
 	&nbsp;<a href="5_4_sites_Help.html"><em>5.4 Sites</em></a><br />
 	<a href="6_0_administerSystem_Help.html">6. Administration</a><br />
+	<a href="7_0_medicalCoding_Help.html">7. Medical Coding</a><br />	
 	</p>
 	</div>
 	</div>
