--- a/web/src/main/webapp/help/6_5_administerSubjects_Help.html
+++ b/web/src/main/webapp/help/6_5_administerSubjects_Help.html
@@ -51,6 +51,7 @@
 	&nbsp;&nbsp;&nbsp;<a href="6.4.1_exportJobs_Help.html"><em>6.4.1 Scheduled Export Jobs</em></a><br />
 	&nbsp;&nbsp;&nbsp;<a href="6.4.2_importJobs_Help.html"><em>6.4.2 Scheduled Import Jobs</em></a><br />
 	&nbsp;<a href="6_5_administerSubjects_Help.html"><em>6.5 Subjects</em></a><br />
+	<a href="7_0_medicalCoding_Help.html">7. Medical Coding</a><br />	
 	</p>
 	</div>
 	</div>
