--- a/web/src/main/webapp/help/index.html
+++ b/web/src/main/webapp/help/index.html
@@ -38,6 +38,7 @@
 	<a href="4_0_extractData_Help.html">4. Extract Data</a><br />
 	<a href="5_0_studySetup_Help.html">5. Study Setup</a><br />
 	<a href="6_0_administerSystem_Help.html">6. Administration</a><br />
+	<a href="7_0_medicalCoding_Help.html">7. Medical Coding</a><br />	
 	</p>
 	</div>
 	</div>
@@ -118,6 +119,7 @@
 			<p>&nbsp;&nbsp;&nbsp;<a href="6.4.2_importJobs_Help.html"><em>6.4.2 Scheduled Import Jobs</em></a></p>
 			<p><a href="6_5_administerSubjects_Help.html"><em>6.5 Subjects</em></a></p>
 		</blockquote>
+		<a href="7_0_medicalCoding_Help.html">7. Medical Coding</a><br /><br />
 <a href="#top">Back to Top</a>
 </div>
 <!--end content-->
